| Summary: | ASTERISK-27539: 'cdr submit' fails: batch mode not enabled. | ||
| Reporter: | Tzafrir Cohen (tzafrir) | Labels: | |
| Date Opened: | 2018-01-02 07:31:16.000-0600 | Date Closed: | 2018-01-03 06:41:33.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | CDR/General |
| Versions: | 13.18.5 15.1.5 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | I configured the CDR system in batch mode. However the 'cdr submit' command claims that I'm not in batch mode.
It seems that the logic of the test in the CLI command is reversed. cdr.conf: {code} [general] ... batch=yes ... {code} {code} *CLI> cdr show status Call Detail Record (CDR) settings ---------------------------------- Logging: Enabled Mode: Batch Log unanswered calls: No Log congestion: No * Batch Mode Settings ------------------- Safe shutdown: Enabled Threading model: Scheduler plus separate threads Current batch size: 0 records Maximum batch size: 100 records Maximum batch time: 300 seconds Next batch processing time: 291 seconds * Registered Backends ------------------- csv *CLI> cdr submit Cannot submit CDR batch: batch mode not enabled. {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-01-02 07:31:17.647-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-01-03 06:41:34.904-0600 Change 7786 merged by Jenkins2: cdr: submit: fix logic of test for batch mode [https://gerrit.asterisk.org/7786|https://gerrit.asterisk.org/7786] By: Friendly Automation (friendly-automation) 2018-01-03 06:44:56.703-0600 Change 7785 merged by Jenkins2: cdr: submit: fix logic of test for batch mode [https://gerrit.asterisk.org/7785|https://gerrit.asterisk.org/7785] By: Friendly Automation (friendly-automation) 2018-01-03 06:48:22.530-0600 Change 7787 merged by Joshua Colp: cdr: submit: fix logic of test for batch mode [https://gerrit.asterisk.org/7787|https://gerrit.asterisk.org/7787] | ||