cdr: submit: fix logic of test for batch mode

ASTERISK-27539 #close

Change-Id: I33cdf329d2bb4486dcae975c450f6aae94c515f7